<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_black"
        android:text="@string/registration"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="@color/colorBlack"
        app:boxStrokeWidthFocused="2dp"
        android:drawablePadding="5dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/colorBlack"
        android:hint="@string/email_address"
        app:hintTextColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/colorBlack"
        app:boxStrokeWidthFocused="2dp"
        android:drawablePadding="5dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/colorBlack"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorBlack"
        android:hint="@string/password"
        app:hintTextColor="@color/colorBlack"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/muli"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/colorBlack"
        app:boxStrokeWidthFocused="2dp"
        android:drawablePadding="5dp"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/colorBlack"
        android:hint="@string/full_name"
        app:hintTextColor="@color/colorBlack"
        android:maxLength="40"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:fontFamily="@font/muli"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tvMobile"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/colorBlack"
        app:boxStrokeWidthFocused="2dp"
        android:drawablePadding="5dp"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:startIconTint="@color/colorBlack"
        android:hint="@string/mobile_number"
        app:hintTextColor="@color/colorBlack"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:fontFamily="@font/muli"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_btn"
        android:text="@string/registration"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMobile"
        android:layout_margin="30dp"
        />

    <Button
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="#00000000"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>